Changes for 1.7.3

 - [ZBX-1317] fixed resource type for maintenance in audit (Vedmak)
 - [DEV-369] added support of file log rotation, item's "log[]" "file" parameter now has a format of "[path][regexp]" (Dmitry)
 - [ZBX-1310] fixed template creating form (Vedmak)
 - [ZBX-1312] removed huge, unused Japanese fonts (Richlv)
 - [ZBX-1272] server name is now shown in page title too (Vedmak)
 - [DEV-137] PDF manual replaced by a README file with a link to on-line documentation
 - [ZBX-1302] fixed references to missing items.nextcheck in the GUI (Alexei)
 - [ZBX-1230] IP adresss is made a default selection in host details form (Alexei)
 - [ZBX-1222] fixed default Debug Log level for agents (Alexei)
 - [DEV-434] added support of host availability for proxy hosts (Sasha)
 - [ZBX-1289] fixed memory leak in server pollers (Sasha)
 - [DEV-433] added generation events after maintenance period if trigger status changed during this period (Sasha)
 - [DEV-137] updated French translation. Thanks to alixen (Richlv)

Changes for 1.7.2

 - [DEV-430] added map labels macro {TRIGGERS.UNACK} (Sasha)
 - [DEV-430] added notification macro {TRIGGER.EVENTS.UNACK} (Sasha)
 - [ZBX-1095] fixed "Link to template" operation for discovered hosts (Sasha)
 - [ZBX-1015] added support of LVM devices for system.swap.in/out under Linux. Thanks to Takanori Suzuki (Sasha)
 - [DEV-429] added support of system.cpu.switches under Linux 2.4/2.6 (Sasha)
 - [DEV-413] fixed first parameter in system.cpu.util key for Linux (all; 0..n) (Sasha)
 - [DEV-411] improved performance of trends module (Sasha)
 - [DEV-428] added new TELNET check 'telnet.run[]' (Sasha)
 - [DEV-428] added new SSH check 'ssh.run[]' (Sasha)

Changes for 1.7.1

 - [DEV-339] added internal check zabbix[wcache,*] for cache module (Sasha)
 - [ZBX-1071] move Zabbix client utilities from sbin to bin (Richlv)

Changes for 1.7.0

 - [DEV-333] added configuration data cache module (Sasha)
 - [DEV-427] frontend is PHP 5.3.0 compatible (Aly)