@@ -1,4 +1,5 @@
 -- See also dhosts.sql
 
+DROP INDEX dservices_1 ON dservices;
 CREATE UNIQUE INDEX dservices_1 on dservices (dcheckid,type,key_,ip,port);
 CREATE INDEX dservices_2 on dservices (dhostid);
