@@ -7,3 +7,9 @@ alter table hosts add ipmi_errors_from integer DEFAULT '0' NOT NULL;
 alter table hosts add snmp_errors_from integer DEFAULT '0' NOT NULL;
 alter table hosts add ipmi_error varchar(128) DEFAULT '' NOT NULL;
 alter table hosts add snmp_error varchar(128) DEFAULT '' NOT NULL;
+ALTER TABLE hosts ALTER COLUMN inbytes TYPE numeric(20);
+ALTER TABLE hosts ALTER COLUMN inbytes SET DEFAULT '0';
+ALTER TABLE hosts ALTER COLUMN inbytes SET NOT NULL;
+ALTER TABLE hosts ALTER COLUMN outbytes TYPE numeric(20);
+ALTER TABLE hosts ALTER COLUMN outbytes SET DEFAULT '0';
+ALTER TABLE hosts ALTER COLUMN outbytes SET NOT NULL;
